spring-cloud/eureka/st.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eureka
  serviceName: "eureka"
  template:
    metadata:
      labels:
        app: eureka
    spec:
      imagePullSecrets:
      - name: harbor
      containers:
      - name: eureka
        image: harbor.od.com/infra/eureka:v1.0.0
        ports:
          - protocol: TCP
            containerPort: 8888
        resources:
          requests:
            cpu: 0.5
            memory: 256Mi
          limits:
            cpu: 1 
            memory: 1Gi
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 10
