spring-cloud/eureka/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: test
spec:
  clusterIP: None
  ports:
  - port: 8888
    name: eureka 
  selector:
    app: eureka
